# novadesk

./: .gitignore  Build.ps1  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Compile_and_Setup.ps1  CopyItems.ps1  Novadesk-Project.sln  Novadesk.exe.manifest  Novadesk.rc  Novadesk.sln  Novadesk.vcxproj  Novadesk.vcxproj.filters  README.md  Run.ps1  SECURITY.md  VersionBump.txt  index.js
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
Tests/AppObject/: index.js
Tests/AppVolumeAPI/: index.js
Tests/AudioTest/: index.js  ui.js
Tests/BackgroundTest/: index.js
Tests/BarElement/: hittest.js  index.js  ui.js
Tests/BrightnessAPI/: index.js
Tests/CPUMonitor/: index.js
Tests/ContainerTest/: index.js  ui.js
Tests/CursorTest/: index.js  ui.js
Tests/DiskMonitor/: index.js
Tests/EnvironmentVariables/: index.js
Tests/FocusTest/: index.js  ui.js
Tests/GroupTest/: index.js  ui.js
Tests/IconExtractAPI/: index.js
Tests/ImageElement/: index.js  ui.js
Tests/JSONAPI/: index.js  merge_base.json  output_test.json  verify.json
Tests/MemoryMonitor/: index.js
Tests/MouseEventAliases/: index.js  ui.js
Tests/MouseMonitor/: index.js
Tests/NowPlayingMonitor/: index.js
Tests/RegisterHotkey/: index.js
Tests/RequireTest/: index.js  moduleA.js  moduleB.js
Tests/RoundLineElement/: index.js  ui.js
Tests/SetWallpaper/: index.js
Tests/ShapeTest/: arc.js  combine.js  curve.js  ellipse.js  index.js  path.js  shape_ui.js  strokes.js  ui.js
Tests/TextElement/: case.js  fontEffect.js  fontGradient.js  fontPath.js  fontWeight.js  index.js  inlineStyle.js  ui.js
Tests/UnifiedGradientTest/: index.js  ui.js
Tests/assets/: 1.cur
Tests/console/: index.js
Widgets/: antialiasAndPaddingTest.js  clipTest.js  config.json  enhancedGraphicsTest.js  imageTest.js  index.js  systemTest.js  test.js  timerDemo.js  verifyLogFix.js
Widgets/UnitTests/: index.js
Widgets/clock/: clock.js
Widgets/network/: network.js
Widgets/src/: utils.js
Widgets/system/: system.js
Widgets/tests/: testBackgroundColor.js  testDisplayMatrics.js  testGradientRendering.js  testSolidColor.js  (+1 more)
installer/: setup.nsi
installer_stub/: installer_stub.manifest  installer_stub.rc  installer_stub.vcxproj
nwm/: nwm.rc  nwm.vcxproj
(+242 files in other folders)
